# avr-rust-examples

./: .gitignore  Cargo.toml  README.md  flash.sh  iom328p.h  out  write_serial.py
C_version/: platformio.ini
C_version/include/: meta.h
C_version/src/: adc.c  adc.h  i2c.c  i2c.h  imu.c  imu.h  main.c  main.txt  meta.c  meta.h  timer.c  timer.h
C_version/test/: test.c
baremetal/C_version/: Makefile
baremetal/C_version/src/: adc.h  i2c.c  i2c.h  imu.c  imu.h  main.c  meta.c  meta.h  timer.c  timer.h  usart.c
baremetal/nano_hal/: Cargo.toml
baremetal/nano_hal/src/: lib.rs  meta.rs  (+1 more)
examples/: avr_hal_new.sh
examples/embedded_hal_test/: Cargo.toml
examples/embedded_hal_test/src/: main.rs
examples/imu-test/: Cargo.toml  README.md
examples/millis/: Cargo.toml
examples/seven-segment/: Cargo.toml  README.md
examples/unsafe_millis/: README.md
examples/unsafe_usart/: Cargo.toml  README.md
examples/usart/: Cargo.toml
how_about_c/raw-nano/: platformio.ini
nano_hal/: Cargo.toml
nano_hal/examples/: Cargo.toml
nano_hal/examples/millis/: test.rs
nano_hal/examples/millis/src/: main.rs
nano_hal/examples/src/: main.rs
nano_hal/how_about_c/raw-nano/src/: main.c
nano_hal/src/: adc.rs  gpio.rs  i2c.rs  lib.rs  meta.rs  timer.rs  usart.rs
nano_hal/test/: test  test.rs
proto/: \  pid_control.py
proto/nano-proto/: Cargo.toml
sandbox/: Cargo.toml  flash.sh  naive_macro.py  write_serial.py
sandbox/src/: main.rs
src/: atmega328p.rs  gpio.rs  i2c.rs  i2c_master.rs  lib.rs  main.rs  usart.rs  utils.rs
test/: asdf.c  asdf.rs  out  test.rs
(+19 files in other folders)
